add comment to content description text in strings.xml, optimize imports

--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="action_settings">Settings</string>
     <string name="scan_button">Scan</string>
     <string name="input_hint">Insert ISBN-13. Digits only.</string>
+
+    <!-- content description for bookcover -->
     <string name="book_cover">Bookcover</string>
 
     <string name="ok_button">Next</string>
